# archnoid_bot

./: CMakeLists.txt  README.md  package.xml
config/: drive_bot.rviz  gazebo_params.yaml  main.rviz  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  twist_mux.yaml  view_bot.rviz
description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: camera.launch.py  launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  rplidar.launch.py  rplidar.launch.py.bak  rsp.launch.py  teleop.launch.py  tracker.launch.py
log/: latest_build
maps/: my_room.pgm  my_room.yaml  my_room_serial.data
scripts/: object_detector.py  object_follower.py
worlds/: obstacles.world
